[package]
name = "cdp-client"
version = "0.1.0"
edition = "2021"
description = "A Chrome DevTools Protocol client"

[[bin]]
name = "cdp-client"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
clap = { version = "4.0", features = ["derive"] }
futures-util = "0.3"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
tokio-tungstenite = "0.20"
url = "2.0"
warp = "0.3"
bytes = "1.0"